--- a/html_files/index.html
+++ b/html_files/index.html
@@ -11,6 +11,7 @@
   <div>
     <p>This is the index page. This may also be the authentication page <br />
       for the website. Page is obviously under construction.</p>
+      <p>commmit test</p>
   </div>
 </body>
 
